[gd_scene load_steps=3 format=3 uid="uid://7e3iaet5cewr"]

[ext_resource type="Script" path="res://LoadingScreen.gd" id="1_ruo75"]

[sub_resource type="LabelSettings" id="LabelSettings_kw8wo"]
font_color = Color(0.690196, 0.690196, 0.690196, 1)

[node name="LoadingScreen" type="PopupPanel"]
size = Vector2i(264, 100)
visible = true
always_on_top = true
script = ExtResource("1_ruo75")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 260.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Laden..."

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
value = 23.0

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Initializing..."
label_settings = SubResource("LabelSettings_kw8wo")

[node name="ProgressBar2" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
value = 23.0

[node name="MessageLabel2" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Initializing..."
label_settings = SubResource("LabelSettings_kw8wo")
